; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/xen/extr_time.c_xen_vcpuop_set_oneshot.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/xen/extr_time.c_xen_vcpuop_set_oneshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }

@VCPUOP_stop_periodic_timer = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clock_event_device*)* @xen_vcpuop_set_oneshot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xen_vcpuop_set_oneshot(%struct.clock_event_device* %0) #0 {
  %2 = alloca %struct.clock_event_device*, align 8
  %3 = alloca i32, align 4
  store %struct.clock_event_device* %0, %struct.clock_event_device** %2, align 8
  %4 = call i32 (...) @smp_processor_id()
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* @VCPUOP_stop_periodic_timer, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @xen_vcpu_nr(i32 %6)
  %8 = call i64 @HYPERVISOR_vcpu_op(i32 %5, i32 %7, i32* null)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 (...) @BUG()
  br label %12

12:                                               ; preds = %10, %1
  ret i32 0
}

declare dso_local i32 @smp_processor_id(...) #1

declare dso_local i64 @HYPERVISOR_vcpu_op(i32, i32, i32*) #1

declare dso_local i32 @xen_vcpu_nr(i32) #1

declare dso_local i32 @BUG(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
